# keyring

./: .flake8  .gitattributes  .gitignore  .hgignore  .hgtags  .travis-macos  .travis-osx  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  Dockerfile  MANIFEST.in  NEWS.rst  README  README.rst  README.txt  appveyor.yml  azure-pipelines.yml  build.sh  build_ext.py  buildout.cfg  conftest.py  extension.py  extensions.py  hook-keyring.backend.py  mypy.ini  pyproject.toml  pytest.ini  release.bat  release.py  release.sh  setup.cfg  setup.py  setup_gnome_keyring.py  setup_kde_kwallet.py  skeleton.md  tea.yaml  towncrier.toml  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
demo/: auth_demo.py  demo.py  keyring_demo.py  simplekeyring.py
docs/: conf.py  index.rst  troubleshooting config.md
keyring/: __init__.py  __main__.py  _compat.py  _keyring.py  _shtab.py  backend.py  cli.py  completion.py  core.py  credentials.py  devpi_client.py  errors.py  getpassbackend.py  http.py  py25compat.py  py27compat.py  py32compat.py  py33compat.py
keyring/backends/: Gnome.py  Google.py  OS_X.py  S3.py  SecretService.py  Windows.py  _OS_X_API.py  _win_crypto.py  chainer.py  dbus.py  fail.py  file.py  gnome_keyring.c  kde_kwallet.cpp  keyczar.py  keyring_util.h  kwallet.py  kwallet_dbus.py  libsecret.py  multi.py  null.py  osx_keychain.c  osx_keychain.py  pyfs.py  win32_crypto.c  win32_crypto.py
keyring/backends/Windows/: __init__.py  api.py
keyring/backends/macOS/: __init__.py  api.py
keyring/backends/windowsOS/: api.py
keyring/compat/: py312.py
keyring/testing/: backend.py  backend_macOS.py  util.py
keyring/tests/: mocks.py  py30compat.py  test_backend.py  test_cli.py  test_core.py  test_errors.py  test_keyring.py  test_multiprocess.py  test_util.py  util.py
keyring/tests/backends/: test_Gnome.py  test_Google.py  test_OS_X.py  test_S3.py  test_SecretService.py  test_Windows.py  test_chainer.py  test_crypto.py  test_file.py  test_keyczar.py  test_kwallet.py  test_multi.py  test_pyfs.py
keyring/util/: __init__.py  escape.py  loc_compat.py  platform.py  platform_.py  properties.py
newsfragments/: +0ebe628c.removal.rst  +9aa71ff2.feature.rst  +c5109672.bugfix.rst  +encodingwarnings.misc.rst  635.bugfix.rst  636.bugfix.rst  637.doc.rst  638.bugfix.rst  643.feature.rst  668.feature.rst  671.bugfix.rst  678.feature.rst  681.bugfix.rst  682.feature.rst  689.feature.rst  694.bugfix.rst  696.feature.rst  698.bugfix.rst  722.bugfix.rst  728.feature.rst  99.removal.rst
pykeyring/: pykeyring_util.h
subversion/libsvn_auth_gnome_keyring/: gnome_keyring.c
subversion/libsvn_auth_kwallet/: kwallet.cpp
subversion/libsvn_ra_serf/: auth.c  win32_auth_sspi.c  win32_auth_sspi.h
subversion/libsvn_subr/: auth-test.c  auth.c  config_auth.c  macos_keychain.c
subversion/tests/: auth.py
test/: demo.py
tests/: test_cli.py  test_core.py  test_errors.py  test_integration.py  test_macOS.py  test_multiprocess.py  test_packaging.py
tests/backends/: test_OS_X.py  test_SecretService.py  test_Windows.py  test_chainer.py  test_kwallet.py  test_libsecret.py  test_macOS.py
tests/util/: test_platform.py
