[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

# jaraco/skeleton#22
[tool.jaraco.pytest.opts.--black]
action = "store_true"

# jaraco/skeleton#22
[tool.jaraco.pytest.opts.--mypy]
action = "store_true"
