[metadata]
license_files =
	LICENSE
name = keyring
author = Kang Zhang
author_email = jobo.zh@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Store and access your passwords safely.
long_description = file:README.rst
url = https://github.com/jaraco/keyring
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Python Software Foundation License
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	pywin32-ctypes!=0.1.0,!=0.1.1; sys_platform=="win32"
	SecretStorage>=3.2; sys_platform=="linux"
	jeepney>=0.4.2; sys_platform=="linux"
	importlib_metadata >= 3.6; python_version<"3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	pytest-enabler

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	keyring=keyring.cli:main
devpi_client =
	keyring = keyring.devpi_client
keyring.backends =
	Windows = keyring.backends.Windows
	macOS = keyring.backends.macOS
	SecretService = keyring.backends.SecretService
	KWallet = keyring.backends.kwallet
	chainer = keyring.backends.chainer
