[metadata]
name = keyring
author = Kang Zhang
author_email = jobo.zh@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
description = Store and access your passwords safely.
long_description = file:README.rst
url = https://github.com/jaraco/keyring
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	pywin32-ctypes>=0.2.0; sys_platform=="win32"
	SecretStorage>=3.2; sys_platform=="linux"
	jeepney>=0.4.2; sys_platform=="linux"
	importlib_metadata >= 4.11.4; python_version < "3.12"
	jaraco.classes
	importlib_resources; python_version < "3.9"

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

completion =
	shtab >= 1.1.0

[options.entry_points]
console_scripts =
	keyring=keyring.cli:main
devpi_client =
	keyring = keyring.devpi_client
keyring.backends =
	Windows = keyring.backends.Windows
	macOS = keyring.backends.macOS
	libsecret = keyring.backends.libsecret
	SecretService = keyring.backends.SecretService
	KWallet = keyring.backends.kwallet
	chainer = keyring.backends.chainer
